[gd_scene load_steps=4 format=3 uid="uid://b20dqbx0aj5yx"]

[ext_resource type="Script" uid="uid://b73apdu663owx" path="res://scripts/ui/swing_card_ui.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://ca0ks2xgtj8s3" path="res://textures/Swing Card.png" id="2_ofw1b"]

[sub_resource type="LabelSettings" id="LabelSettings_ofw1b"]
font_size = 36
font_color = Color(0, 0, 0, 1)

[node name="SwingCardUI" type="Control"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 180.0
script = ExtResource("1_script")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 304.0
offset_bottom = 419.0
texture = ExtResource("2_ofw1b")

[node name="TempoCostLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21700001
anchor_top = 0.117000006
anchor_right = 0.70000005
anchor_bottom = 0.5
offset_left = -0.040000916
offset_top = -0.060001373
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "2"
label_settings = SubResource("LabelSettings_ofw1b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardName" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 36.0
offset_right = -4.0
offset_bottom = 56.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Card Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="art-shape" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32500002
anchor_top = 0.333
anchor_right = 2.117
anchor_bottom = 1.0170001
offset_top = 0.05999756
offset_right = -0.040008545
offset_bottom = -0.060012817
grow_horizontal = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="art-accuracy" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.53300005
anchor_right = 0.9
anchor_bottom = 0.83300006
offset_top = 0.05998993
offset_bottom = 0.0599823
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="CardDescription" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.85
offset_left = 6.0
offset_right = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "Card effect description"
fit_content = true
scroll_active = false

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.575
anchor_top = 1.728
anchor_right = 2.525
anchor_bottom = 2.283
offset_top = -0.040008545
offset_bottom = 0.05999756
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5
